--- a/src/app/modules/admin/components/finish-filling-action/finish-filling-action.component.html
+++ b/src/app/modules/admin/components/finish-filling-action/finish-filling-action.component.html
@@ -1,8 +1,8 @@
-<button [print]="['printfinishfillingform', config]" id="printbtn">Print</button>
+<!-- <button [print]="['printfinishfillingform', config]" id="printbtn">Print</button> -->
 
 <form [formGroup]="finishfillingform" id="form">
     <h1>Fill Conformation</h1>
-    <button mat-raised-button color="" mat-dialog-close  id="crossbtn">X</button>
+    <span mat-raised-button color="" mat-dialog-close id="crossbtn">X</span>
     <input type="text" placeholder="{{Orderdetails.orderId}}" formControlName="orderId"
         [(ngModel)]="Orderdetails.orderId" hidden>
     <div id="table">
@@ -18,7 +18,7 @@
             </thead>
             <tbody>
 
-                <tr *ngFor="let item of orderItemDetails">
+                <tr *ngFor="let item of orderItemDetails;let i=index">
 
                     <td> <img src="{{imageBaseUrl}}{{item.imageUrl}}" class="image" height="110px" width="110px">
                     </td>
@@ -29,37 +29,20 @@
                     <td>12345678</td>
                     <td>{{item.quantity}}</td>
                     <div id="checkboxes">
-                    <label style="margin-top: 50px; font-size: 20px;font-family: initial;">
-                        <input type="checkbox" (change)="onCheckboxChange($event)" style="width: 25px;height: 25px;"[disabled]="firstCheckbox">
-                        Yes
-                    </label>
+                        <label style= "font-size: 20px;font-family: initial;">
+                            <input type="checkbox" (click)="onCheckboxChange($event,i,'Yes')"
+                                style="width: 25px;height: 25px;" [disabled]="firstCheckbox" value="item.orderItemId">
+                            Yes
+                        </label>
 
-                    <label style="margin-top: 50px; font-size: 20px;font-family: initial;">
-                        <input type="checkbox" (change)="onCheckboxChange2($event)" style="width: 25px;height: 25px;" [disabled]="isDisable">
-                        Partially Filled
-                    </label>
-                </div>
+                        <label style= "font-size: 20px;font-family: initial;margin-left: 5px;" class="checkboxlabel">
+                            <input type="checkbox" (click)="onCheckboxChange($event,i,'Partially-Filled')"
+                                style="width: 25px;height: 25px;" [disabled]="isDisable" value="item.orderItemId">
+                            Partially <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Filled
+                        </label>
+                      
 
-
-
-
-                <!-- <label style="margin-top: 50px; font-size: 20px; font-family: initial;">
-                    <input type="checkbox"
-                           (change)="onCheckboxChange($event)"
-                           style="width: 25px; height: 25px;"
-                           [disabled]="firstCheckbox">
-                    Yes
-                  </label>
-                  
-                  <label style="margin-top: 50px; font-size: 20px; font-family: initial;">
-                    <input type="checkbox"
-                           (change)="onCheckboxChange2($event)"
-                           style="width: 25px; height: 25px;"
-                           [disabled]="isDisable">
-                    Partially Filled
-                  </label> -->
-                  
-
+                    </div>
                 </tr>
 
             </tbody>
@@ -68,16 +51,15 @@
 
     <div id="submittedbtns">
 
-        <button class="btn btn-success"
-            (click)="fillingSuccess()" style="width: 100px;font-family: initial;" [disabled]="isSubmitDisabled" >DONE</button>
-       
-      
-        <button class="btn btn-primary"  (click)="fillingFailed()"
+        <button class="btn btn-success" (click)="fillingSuccess()" style="width: 100px;font-family: initial;"
+            [disabled]="isSubmitDisabled">DONE</button>
+
+
+        <button class="btn btn-primary" (click)="fillingFailed()"
             style="margin-left:20px;width:150px;font-family: initial;">Partially Filled</button>
-      
-            <button type="submit" class="btn btn-danger"  mat-dialog-close style="font-family: initial;font-weight: bolder;width: 100px;margin-left: 20px;">Cancel</button>
-       
+
+        <button type="submit" class="btn btn-danger" mat-dialog-close
+            style="font-family: initial;font-weight: bolder;width: 100px;margin-left: 20px;">Cancel</button>
+
     </div>
 </form>
-
-
