--- a/src/app/modules/admin/components/finish-shipping-action/finish-shipping-action.component.html
+++ b/src/app/modules/admin/components/finish-shipping-action/finish-shipping-action.component.html
@@ -2,7 +2,7 @@
 
 
     <h1 id="headding" style="font-family: initial;font-weight: bolder;"> Finish Shipping</h1>
-    <button mat-raised-button color="" mat-dialog-close id="crossbtn">X</button>
+    <span mat-raised-button color="" mat-dialog-close id="crossbtn">X</span>
 
     <div class="card" class="card1">
 
