--- a/src/app/modules/admin/components/order-management/order-management.component.html
+++ b/src/app/modules/admin/components/order-management/order-management.component.html
@@ -130,7 +130,7 @@
           </svg>
         </div>
 
-        <div data-bs-toggle="tooltip" data-bs-placement="bottom" title="Download Invoice" style="cursor: pointer;">
+        <div data-bs-toggle="tooltip" data-bs-placement="bottom" title="Download Invoice" style="cursor: pointer;" style="margin-left: 10px;">
           <i class="bi bi-receipt-cutoff"></i>
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
             class="bi bi-receipt-cutoff" viewBox="0 0 16 16" (click)="downloadInvoice(element.orderId)">
