--- a/src/app/modules/admin/components/product-view/product-view.component.html
+++ b/src/app/modules/admin/components/product-view/product-view.component.html
@@ -47,7 +47,7 @@
           </thead>
           <tbody>
             <tr class="table-light" *ngFor="let sku of skuData">
-              <td>
+              <td style="font-size: 17px;">
                 <!-- <input class="form-control" style="width: auto" type="text" class="form-control"
                   value={{sku.productSkuCd}} [attr.disabled]="isDisabled ? true : null"> -->
                   <span >{{sku.productSkuCd}}</span>
