--- a/src/app/modules/admin/components/start-packing-action/start-packing-action.component.html
+++ b/src/app/modules/admin/components/start-packing-action/start-packing-action.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="startpackingform" id="form">
     <h1 id="headding">Start Packing</h1>
-    <button mat-raised-button color="" mat-dialog-close id="crossbtn">X</button>
+    <span mat-raised-button color="" mat-dialog-close id="crossbtn">X</span>
     <div id="printbtns">
 
         <button [print]="['printstartpackingform', config]" id="printbtn1">Print</button>
