--- a/src/app/modules/admin/components/start-shipping-action/start-shipping-action.component.html
+++ b/src/app/modules/admin/components/start-shipping-action/start-shipping-action.component.html
@@ -2,7 +2,7 @@
 
 
     <h1 id="headding"> Start Shipping</h1>
-    <button mat-raised-button color="" mat-dialog-close id="crossbtn">X</button>
+    <span mat-raised-button color="" mat-dialog-close id="crossbtn">X</span>
     <div id="printbtns">
 
         <button [print]="['printstartshippingform', config]" id="printbtn1">Print</button>
