--- a/src/app/modules/admin/components/update-product/update-product.component.scss
+++ b/src/app/modules/admin/components/update-product/update-product.component.scss
@@ -7,6 +7,7 @@
     width: 1200px;
     height: 500px;
     font-family: initial;
+    overflow-x: hidden;
 
 }
 .col-3{
@@ -42,7 +43,7 @@
 }
 .form-label{
     font-weight: bolder;
-    font-size: 18px;
+    font-size: 20px;
     margin-top: 10px;
 }
 #crossbtn{
