--- a/src/app/modules/admin/components/check-quality-action/check-quality-action.component.html
+++ b/src/app/modules/admin/components/check-quality-action/check-quality-action.component.html
@@ -1,10 +1,10 @@
 
 
 
-<button [print]="['printcheckqualityform', config]" id="printbtn">Print</button>
+<!-- <button [print]="['printcheckqualityform', config]" id="printbtn">Print</button> -->
 <form  id="form">
     <h1>Check Quality</h1>
-    <button mat-raised-button color="" mat-dialog-close  id="crossbtn">X</button>
+    <span mat-raised-button color="" mat-dialog-close  id="crossbtn">X</span>
     <input type="text" placeholder="{{Orderdetails.orderId}}" formControlName="orderId"
         [(ngModel)]="Orderdetails.orderId" hidden>
     <div id="table">
