--- a/src/app/modules/admin/components/check-quality-action/check-quality-action.component.scss
+++ b/src/app/modules/admin/components/check-quality-action/check-quality-action.component.scss
@@ -1,96 +1,233 @@
+// /*
+//  *   Copyright (c) 2023 Dmantz Technologies Pvt ltd
+//  *   All rights reserved.
+//  */
+
+
+
+// #form{
+//     width:auto;
+//     height: 500px;
+//     overflow: auto;
+//   //  border: ridge 3px;
+
+ 
+// }
+
+// #table{
+// border: ridge 2px;
+// margin-left: 20px;
+// margin-right: 20px;
+// }
+
+// .custom-table td,
+// .custom-table th {
+//   // border:none;
+//    padding: 5px;
+//    margin-left: 30px;
+  
+// }
+
+// .custom-table td{
+//   font-size: 20px;
+// font-family:initial ;
+//   padding-left: 70px;
+
+
+
+ 
+// }
+// .custom-table th{
+//   font-size: 20px;
+//   font-family:initial ;
+//   padding-left: 60px;
+//   border-bottom: 1px solid black;
+
+// }
+// h1{
+//   margin-left: 500px;
+//   color: coral;
+//   font-weight:bolder
+// }
+// #submittedbtns{
+//     margin-top:30px;
+//    margin-left: 500px;
+  
+  
+// }
+// #printbtn{
+//   margin-left: 800px;
+//   width: 100px;
+//   height: 30px;
+//   color: cadetblue;
+//   margin-top:5px;
+//   position: absolute;
+// }
+
+// #crossbtn{
+//   margin-left: 990px;
+//   margin-top: -50px;
+//   position: absolute;
+//    color: red;
+// }
 /*
  *   Copyright (c) 2023 Dmantz Technologies Pvt ltd
  *   All rights reserved.
  */
+ #form{
+  width:1000px;
+  height: 600px;
+  overflow-y: auto;
+  overflow-x: hidden;
+//  border: ridge 3px;
 
-
-
-#form{
-    width:auto;
-    height: auto;
-  //  border: ridge 3px;
- 
 }
 
 #table{
 border: ridge 2px;
 margin-left: 20px;
 margin-right: 20px;
+
 }
+
+
+#submittedbtns{
+margin-top:30px;
+margin-left: 400px;
+}
+
+
 
 .custom-table td,
 .custom-table th {
-  // border:none;
-   padding: 5px;
-   margin-left: 30px;
-  
+// border:none;
+padding: 5px;
+margin-left: 30px;
+
 }
 
 .custom-table td{
-  font-size: 20px;
+font-size: 20px;
 font-family:initial ;
-  padding-left: 70px;
-
-
-
- 
+padding-left: 70px;
 }
 .custom-table th{
-  font-size: 20px;
-  font-family:initial ;
-  padding-left: 60px;
-  border-bottom: 1px solid black;
+font-size: 20px;
+font-family:initial ;
+padding-left: 60px;
+border-bottom: 1px solid black;
 
 }
 h1{
-  margin-left: 500px;
-  color: coral;
-  font-weight:bolder
-}
-#submittedbtns{
-    margin-top:30px;
-   margin-left: 500px;
-  
-  
-}
-#printbtn{
-  margin-left: 800px;
-  width: 100px;
-  height: 30px;
-  color: cadetblue;
-  margin-top:5px;
-  position: absolute;
+margin-left: 480px;
+color: coral;
+font-weight:bolder;
+font-family: initial;
+font-size: 30px;
 }
 
-#secondform{
-  margin-top: -100px;
-}
-#secondformmaindiv{
-  border: ridge 10px;
-width: 800px;
-height: 200px;
-margin-top: 20px;
-margin-left: 210px;
-}
-#staffcd{
-  margin-top: 120px;
-  position: absolute;
-  margin-left: 160px;
-}
+// #printbtn{
+//   margin-left: 810px;
+//  margin-top: -10px;
+//   width: 100px;
+//   height: 30px;
+//   color: cadetblue;
+//   margin-top:20px;
+//   position: absolute;
+// }
 
-#sbmtbtn{
-  margin-top: 200px;
-  margin-left: 300px;
-  position: absolute;
-}
-#enterstafflablel{
-  margin-top: 130px;
-  margin-left: 20px;
-  font-size: 18px;
-}
+
+
+
 #crossbtn{
-  margin-left: 990px;
-  margin-top: -50px;
-  position: absolute;
-   color: red;
+margin-left: 940px;
+margin-top: -60px;
+color: red;
+border: solid black 1px;
+padding: 5px;
+position: sticky;
+position: absolute;
+font-size: 20px;
+
+}
+
+@media screen and (min-width:360px) and (max-width:1400px) {
+#form{
+width:1000px;
+height: 520px;
+overflow-y: auto;
+overflow-x: hidden;
+
+//  border: ridge 3px;
+
+}
+
+#table{
+border: ridge 2px;
+margin-left: 20px;
+margin-right: 20px;
+
+}
+
+
+#submittedbtns{
+margin-top:30px;
+margin-left: 400px;
+}
+
+
+
+.custom-table td,
+.custom-table th {
+// border:none;
+padding: 5px;
+margin-left: 30px;
+
+}
+
+.custom-table td{
+font-size: 20px;
+font-family:initial ;
+padding-left: 70px;
+}
+.custom-table th{
+font-size: 20px;
+font-family:initial ;
+padding-left: 60px;
+border-bottom: 1px solid black;
+
+}
+h1{
+margin-left: 480px;
+color: coral;
+font-weight:bolder;
+font-family: initial;
+font-size: 30px;
+}
+
+// #printbtn{
+//   margin-left: 810px;
+//  margin-top: -10px;
+//   width: 100px;
+//   height: 30px;
+//   color: cadetblue;
+//   margin-top:20px;
+//   position: absolute;
+// }
+
+
+
+
+#crossbtn{
+margin-left: 940px;
+margin-top: -60px;
+color: red;
+border: solid black 1px;
+padding: 2px;
+position:sticky;
+position: absolute;
+font-size: 20px;
+
+}
+
 }
