--- a/src/app/modules/admin/components/finish-filling-action/finish-filling-action.component.scss
+++ b/src/app/modules/admin/components/finish-filling-action/finish-filling-action.component.scss
@@ -7,8 +7,8 @@
 
 
 #form{
-    width:1300px;
-    height: 700px;
+    width:auto;
+    height: 600px;
     overflow: auto;
   //  border: ridge 3px;
 }
@@ -53,51 +53,115 @@ h1{
 
 #submittedbtns{
     margin-top:30px;
-   margin-left: 460px;
+   margin-left: 420px;
   
   
 }
-#printbtn{
-  margin-left: 900px;
-  width: 100px;
-  height: 30px;
-  color: cadetblue;
-  margin-top:5px;
-  position: absolute;
-}
+// #printbtn{
+//   margin-left: 900px;
+//   width: 100px;
+//   height: 30px;
+//   color: cadetblue;
+//   margin-top:5px;
+//   position: absolute;
+// }
 
 #secondform{
   margin-top: -100px;
 }
-#secondformmaindiv{
-  border: ridge 10px;
-width: 800px;
-height: 200px;
-margin-top: 50px;
-margin-left: 210px;
-}
-#staffcd{
-  margin-top: 120px;
-  position: absolute;
-  margin-left: 160px;
-}
-
-#sbmtbtn{
-  margin-top: 200px;
-  margin-left: 300px;
-  position: absolute;
-}
-#enterstafflablel{
-  margin-top: 130px;
-  margin-left: 20px;
-  font-size: 18px;
-}
 #crossbtn{
-  margin-left: 1120px;
-  margin-top: -50px;
+  margin-left: 1090px;
+  margin-top: -60px;
   position: absolute;
    color: red;
+   border: solid 1px black;
+   font-size: 22px;
+   padding: 5px;
 }
 #checkboxes{
-  display: inline;
+  display: inline-flex;
+  margin-top: 40px;
+  position: relative;
+  margin-left: -40px;
+
+}
+@media screen and (min-width:360px) and (max-width:1360px){
+  #form{
+    width:1000px;
+    height: 500px;
+    overflow: auto;
+  //  border: ridge 3px;
+}
+
+#table{
+border: ridge 2px;
+margin-left: 20px;
+margin-right: 20px;
+}
+
+.custom-table td,
+.custom-table th {
+  // border:none;
+   padding: 5px;
+   margin-left: 30px;
+  
+}
+
+.custom-table td{
+  font-size: 20px;
+font-family:initial ;
+  padding-left: 70px;
+
+
+
+ 
+}
+.custom-table th{
+  font-size: 20px;
+  font-family:initial ;
+  padding-left: 60px;
+  border-bottom: 1px solid black;
+
+}
+h1{
+
+  color: coral;
+  font-family: intial;
+  font-weight: bolder;
+  margin-left: 450px;
+}
+
+#submittedbtns{
+    margin-top:30px;
+   margin-left: 350px;
+  }
+// #printbtn{
+//   margin-left: 900px;
+//   width: 100px;
+//   height: 30px;
+//   color: cadetblue;
+//   margin-top:5px;
+//   position: absolute;
+// }
+
+#secondform{
+  margin-top: -100px;
+}
+#crossbtn{
+  margin-left: 950px;
+  margin-top: -60px;
+  position: absolute;
+   color: red;
+   border: solid 1px black;
+   font-size: 22px;
+   padding: 5px;
+}
+#checkboxes{
+  display: inline-flex;
+  margin-top: 40px;
+  position: relative;
+  margin-left: -40px;
+
+}
+  
 }
